# elasticsearchcpp_client

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: FindCIVETWEB.cmake  FindCURL.cmake  FindEasyExif.cmake  FindJSON.cmake  FindTXML.cmake  FindZLib.cmake  download_civetweb.cmake.in  download_curl.cmake.in  download_easyexif.cmake.in  download_json.cmake.in  download_txml.cmake.in  download_zlib.cmake.in
elasticsearch/aux/: all_requests.hpp  doc_id_create.cpp  doc_id_create.hpp  doc_id_pm.cpp  doc_id_pm.hpp
elasticsearch/aux/doc_id/: model.hpp  schema_serializer.hpp  serializer.hpp
elasticsearch/books/: all_requests.hpp  book_reader.cpp  book_reader.hpp
elasticsearch/books/EPUB/: epub_reader.cpp  epub_reader.hpp  epub_unpacker.hpp
elasticsearch/books/EPUB/model/: DcContributor.h  DcCreator.h  DcIdentifier.h  DcLanguage.h  DcTitle.h  Metadata.h  Package.h  TextElement.h
elasticsearch/books/EPUB/serializer/: book_model_serializer.hpp
elasticsearch/books/FB2/: fb2_packer.cpp  fb2_packer.hpp  fb2_reader.cpp  fb2_reader.hpp  fb2_unpacker.cpp  fb2_unpacker.hpp
elasticsearch/books/FB2/model/: ShortFictionBook.hpp
elasticsearch/books/FB2/serializer/: book_model_serializer.hpp
elasticsearch/books/data_model/: Contributor.h  Creator.h  Identifier.h  Language.h  Title.h  model.hpp
elasticsearch/books/data_model/serializers/: deserializer.hpp  schema_serializer.hpp  serializer.hpp
elasticsearch/books/interfaces/: book_packer.hpp
elasticsearch/books/request/: book_index_mapping.cpp  book_index_mapping.hpp  create_book.cpp  create_book.hpp  delete_book.cpp  delete_book.hpp  get_book.cpp  get_book.hpp  search_book.cpp  search_book.hpp  search_book_specializations.hpp  search_book_tags.hpp  search_book_tags_mapping.hpp
elasticsearch/common_model/: BinaryBlob.h  CreationTime.h  Description.h  Format.h  OriginalPath.h  Preview.h  SchemaVersion.h  SourceName.h  Tag.h  model.hpp  search_common_tags.hpp  search_common_tags_mapping.hpp  search_tag_specializations.hpp
elasticsearch/common_model/serializers/: decorator.hpp  deserializer.hpp  schema_serializer.hpp  serializer.hpp
elasticsearch/images/: all_requests.hpp  image_reader.cpp  image_reader.hpp
elasticsearch/images/JPG/: reader.cpp  reader.hpp
elasticsearch/images/data_model/: CameraMake.h  CameraModel.h  DigitizeTime.h  GeoPoint.cpp  GeoPoint.h  OriginalTime.h  Resolution.cpp  Resolution.h  Title.h  model.hpp
elasticsearch/images/interfaces/: image_packer.hpp
elasticsearch/images/request/: create_image.cpp  create_image.hpp  delete_image.cpp  delete_image.hpp  get_image.cpp  get_image.hpp  image_index_mapping.cpp  image_index_mapping.hpp  search_image.cpp  search_image.hpp  search_image_specializations.hpp  search_image_tags.hpp  search_image_tags_mapping.hpp
elasticsearch/interfaces/: packer.hpp
elasticsearch/service/: all_requests.hpp  doc_id_create.cpp  doc_id_create.hpp  doc_id_pm.cpp
elasticsearch/service/doc_id/: schema_serializer.hpp  serializer.hpp
elasticsearch/utils/: base64.cpp  base64.h  base64_to_file_unpacker.cpp  base64_to_file_unpacker.hpp  conversion.hpp  file_to_base64_packer.cpp  file_to_base64_packer.hpp  strings.cpp  strings.hpp  traits.hpp  zutils.cpp  zutils.hpp
elasticsearch/v7_10/request/: create_pit.cpp  create_pit.hpp  delete_data.cpp  delete_data.hpp  delete_pit.cpp  delete_pit.hpp  get_data.cpp  get_data.hpp  index_mapping.cpp  index_mapping.hpp  index_mapping_delete.cpp  index_mapping_delete.hpp  index_mapping_update.cpp  index_mapping_update.hpp  put_data.cpp  put_data.hpp  search.cpp  search.hpp
gui/python_tk/: dialogs.py  es_app_client.py  get_data_dialog.py
services/: CMakeLists.txt
services/workers/: CMakeLists.txt
services/workers/app_request_server/: CMakeLists.txt
sources/: main.cpp
sources/adapter/: base_adaptee_mixin.hpp  base_adapter_callback_mixin.hpp  base_adapter_interface.hpp  base_exclusive_adaptee_mixin.hpp  base_observer_mixin.hpp
sources/adapter/curlu/: adapter_interface.hpp  url_part_adapter.cpp  url_part_adapter.hpp
sources/adapter/easy/: adapter_callback_interface.hpp  adapter_interface.hpp  curlu_adapter.cpp  curlu_adapter.hpp  custom_request_adapter.cpp  custom_request_adapter.hpp  multi_adapter.cpp  multi_adapter.hpp  post_adapter.cpp  post_adapter.hpp  sstream_receiver.cpp  sstream_receiver.hpp  upload_adapter.cpp  upload_adapter.hpp
sources/adapter/multi/: adapter_interface.hpp
sources/connection/: connection.cpp  connection.hpp  multi_connection.cpp  multi_connection.hpp
sources/http_client/: http_connection.cpp  http_connection.hpp  http_get.cpp  http_get.hpp
sources/interface_impl/receiver/: model_based_sstream_receiver.hpp
sources/interface_impl/upload_data_provider/: binary_array_upload_data_provider.cpp  binary_array_upload_data_provider.hpp  data_provider_dispatcher.cpp  data_provider_dispatcher.hpp  istream_upload_data_provider.cpp  istream_upload_data_provider.hpp  istringstream_upload_data_provider.cpp  istringstream_upload_data_provider.hpp  json_upload_data_provider.cpp  json_upload_data_provider.hpp  string_upload_data_provider.cpp  string_upload_data_provider.hpp  stringstream_upload_data_provider.cpp  stringstream_upload_data_provider.hpp
sources/interfaces/: notifier_data_provider_dispatcher.hpp  notifier_upload_data_provider.hpp  single_notifier_upload_data_provider.hpp  upload_data_provider.hpp
tests/: CMakeLists.txt
tests/books/: CMakeLists.txt  book_create_suite.cpp  book_image_mapping_suite.cpp  book_search_suite.cpp  fb2_pack_unpack_suite.cpp
tests/common/: Deserializers.hpp  Nodes.hpp  NodesSearchTagMapping.hpp  Serializers.hpp  settings.hpp
tests/curl_cpp/: CMakeLists.txt  upload_data_provider_test.cpp
tests/images/: CMakeLists.txt  image_create_suite.cpp  image_mapping_suite.cpp  jpg_exif_suite.cpp
tests/requests/: CMakeLists.txt  aux_doc_index_gen_suite.cpp  data_create_and_get_suite.cpp  delete_suite.cpp  index_mapping_suite.cpp  point_in_time_suite.cpp  search_suite.cpp
tests/utils/: CMakeLists.txt  utils_suite.cpp
(+129 files in other folders)
